# CircuitCruiserFW

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  HARDWARE.md  LICENSE  Makefile  README.md  config.env  esp32.svd  partitions.csv  sdkconfig  sdkconfig.defaults
.devcontainer/: Dockerfile  devcontainer.json
3d-files/: circuit_cruiser_servoarmsok_v2.stl
hardware/: CMakeLists.txt  gpio.c  gpio.h  hardware.c  hardware.h  i2c.c  i2c.h  led.c  led.h  motor.c  motor.h  pwm.c  pwm.h
lua/: CMakeLists.txt
lua/src/: Makefile
main/: CMakeLists.txt  Kconfig.projbuild  cli.c  cli.h  event.c  event.h  idf_component.yml  main.c  webserver.c  webserver.h  wifi_controller.c  wifi_controller.h
release/2025-09-16 16-36 CEST/: flash_args
release/2025-09-22 14-50 CEST/: flash_args
web/: index.html
web/css/: format.css
web/js/: joy.js  script.js
web/lua/: demo.lua  startup.lua
