# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                                                                         #
#                              +@@+    .-++-------=*=.                    #
#                             +%%@+-------------------+                   #
#                            =@@+*=---------------------==                #
#                         .%+-=@%*+=----------------------=*.             #
#                        =%---=@=***-------------------------+.           #
#                       .%----=@%#=+%=------------------------*           #
#                        *+---=@**#%-#=----------+:*------------          #
#                        .#+--=@%%#++++=-------+: :*-----------*          #
#                           +##@%#%%%#=#=----*:..:*------------#.         #
#             **%@@@@@@@#+-.                    -=------------+           #
#       .*@%+.         .                       =------------==            #
#    =@=.....         =@+=%%   +@   --        :*-------------             #
#   @*........                 .#@@@-          +------------=:            #
#   @=.......                                  -+---------------++*.      #
#   *%-...-%@.                     ...         .=------------------:      #
#     -@@=...                                   .+----------------#       #
#        =#@%+-..                               ..+-------------=.        #
#                  .:-=*#%%%@@@:                ...=----------+:  +=+:    #
#                            +%                  ...+---------= .-----:   #
#                           :@.                   ...++--------------+    #
#                           %*                     ....+@%#-----%+        #
#                          :@.                      .....+@:              #
#                                                                         #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# NAME       = Build rules for hardware drivers                           #
# PROJECT    = Beursgadget 2025 - Circuit-Cruiser                         #
# DATE       = 11-12-2024                        	                      #
# AUTHOR     = Bas Wijnen & Jan-Cees Tjepkema                             #
# WEBSITE    = https://pinkfluffyunicorns.nl                              #
# COPYRIGHT(C) Pink Fluffy Unicorns 2025                                  #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

idf_component_register(SRCS "motor.c" "i2c.c" "led.c" "hardware.c" "gpio.c" "pwm.c" "i2c.c"
    PRIV_REQUIRES esp_driver_gpio esp_adc neopixel freertos main
    INCLUDE_DIRS ".")
