# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                                                                         #
#                              +@@+    .-++-------=*=.                    #
#                             +%%@+-------------------+                   #
#                            =@@+*=---------------------==                #
#                         .%+-=@%*+=----------------------=*.             #
#                        =%---=@=***-------------------------+.           #
#                       .%----=@%#=+%=------------------------*           #
#                        *+---=@**#%-#=----------+:*------------          #
#                        .#+--=@%%#++++=-------+: :*-----------*          #
#                           +##@%#%%%#=#=----*:..:*------------#.         #
#             **%@@@@@@@#+-.                    -=------------+           #
#       .*@%+.         .                       =------------==            #
#    =@=.....         =@+=%%   +@   --        :*-------------             #
#   @*........                 .#@@@-          +------------=:            #
#   @=.......                                  -+---------------++*.      #
#   *%-...-%@.                     ...         .=------------------:      #
#     -@@=...                                   .+----------------#       #
#        =#@%+-..                               ..+-------------=.        #
#                  .:-=*#%%%@@@:                ...=----------+:  +=+:    #
#                            +%                  ...+---------= .-----:   #
#                           :@.                   ...++--------------+    #
#                           %*                     ....+@%#-----%+        #
#                          :@.                      .....+@:              #
#                                                                         #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# NAME       = Build rules for Lua library                                #
# PROJECT    = Beursgadget 2025 - Circuit-Cruiser         	              #
# DATE       = 11-12-2024                        	                      #
# AUTHOR     = Bas Wijnen & Jan-Cees Tjepkema                             #
# WEBSITE    = https://pinkfluffyunicorns.nl                              #
# COPYRIGHT(C) Pink Fluffy Unicorns 2025                                  #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

idf_component_register(SRC_DIRS "src"
    EXCLUDE_SRCS "lua.c" "luac.c"
    INCLUDE_DIRS "src")
