# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
#                                                                         #
#                              +@@+    .-++-------=*=.                    #
#                             +%%@+-------------------+                   #
#                            =@@+*=---------------------==                #
#                         .%+-=@%*+=----------------------=*.             #
#                        =%---=@=***-------------------------+.           #
#                       .%----=@%#=+%=------------------------*           #
#                        *+---=@**#%-#=----------+:*------------          #
#                        .#+--=@%%#++++=-------+: :*-----------*          #
#                           +##@%#%%%#=#=----*:..:*------------#.         #
#             **%@@@@@@@#+-.                    -=------------+           #
#       .*@%+.         .                       =------------==            #
#    =@=.....         =@+=%%   +@   --        :*-------------             #
#   @*........                 .#@@@-          +------------=:            #
#   @=.......                                  -+---------------++*.      #
#   *%-...-%@.                     ...         .=------------------:      #
#     -@@=...                                   .+----------------#       #
#        =#@%+-..                               ..+-------------=.        #
#                  .:-=*#%%%@@@:                ...=----------+:  +=+:    #
#                            +%                  ...+---------= .-----:   #
#                           :@.                   ...++--------------+    #
#                           %*                     ....+@%#-----%+        #
#                          :@.                      .....+@:              #
#                                                                         #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
# NAME       = Build rules for main code                                  #
# PROJECT    = Beursgadget 2025 - Circuit-Cruiser         	              #
# DATE       = 11-12-2024                        	                      #
# AUTHOR     = Bas Wijnen & Jan-Cees Tjepkema                             #
# WEBSITE    = https://pinkfluffyunicorns.nl                              #
# COPYRIGHT(C) Pink Fluffy Unicorns 2025                                  #
# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

idf_component_register(SRCS "main.c" "wifi_controller.c" "webserver.c" "event.c" "cli.c"
                    REQUIRES lua
                    PRIV_REQUIRES esp_wifi nvs_flash esp_https_server json fatfs spiffs hardware
                    INCLUDE_DIRS ".")

